[project]
name = "beam-executor"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "apache-beam[dataframe,gcp]>=2.60.0",
    "fastapi[standard]>=0.112.1",
    "pydantic>=2.8.2",
    "pytest>=8.3.2",
    "requests>=2.32.3",
    "vulkan",
    "vulkan-public",
]

[tool.uv.sources]
vulkan = { path = "../vulkan" }
vulkan-public = { path = "../vulkan-public" }
