[project]
name = "resolution_svc"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "tomlkit>=0.13.2",
    "vulkan-public",
]

[tool.ruff]
exclude = ["templates"]

[tool.uv.sources]
vulkan-public = { path = "../vulkan-public" }
