[project]
name = "vulkan-agent"
version = "0.1.0"
description = "AI Agent service for Vulkan platform - provides conversational assistance for users"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
    "pytest>=8.3.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
