[project]
name = "vulkan-dagster-server"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.10"
dependencies = [
    "dagster-dg-cli>=1.11.9",
    "dagster-postgres>=0.27.9",
    "dagster-webserver>=1.11.9",
    "fastapi[standard]>=0.112.0",
    "tomlkit>=0.13.2",
    "vulkanlabs-vulkan[dagster]",
]

[tool.setuptools]
packages = ["server"]

[tool.uv.sources]
vulkanlabs-vulkan = { path = "../vulkan" }
