[project]
name = "vulkanlabs-vulkan-engine"
version = "0.1.0"
description = "Vulkan core engine"
dependencies = [
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.0",
    "pydantic>=2.8.2",
    "dagster-graphql>=1.8.2",
    "pandas>=2.2.3",
    "vulkanlabs-vulkan[dagster,hatchet]",
    "requests>=2.32.3",
    "redis>=5.0.0",
    "httpx>=0.24.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
gcp = ["google-cloud-logging>=3.11.4"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.2"]

[tool.uv.sources]
vulkan = { path = "../vulkan" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vulkan_engine"]

# Include all files in the alembic directory (migrations, templates, config)
artifacts = [
  "vulkan_engine/alembic.ini",
  "vulkan_engine/alembic/**",
]
