[project]
name = "vulkanlabs-vulkan-engine"
version = "0.1.0"
description = "Vulkan core engine"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "dagster-graphql>=1.8.2",
    "pandas>=2.2.3",
    "vulkanlabs-vulkan[dagster,hatchet]",
    "requests>=2.32.3",
    "redis>=5.0.0",
    "httpx>=0.24.0",
    "structlog>=24.1.0",
    "pyjwt>=2.10.1",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgres]>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vulkan_engine"]
