[project]
name = "vulkan-hatchet-server"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "tomlkit>=0.13.2",
    "vulkanlabs-vulkan[hatchet]",
]

[tool.setuptools]
packages = ["server"]

[tool.uv.sources]
vulkanlabs-vulkan = { path = "../vulkan" }
