[project]
name = "vulkan_public"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "apache-beam>=2.60.0",
    "coloredlogs>=14.0",
    "requests>=2.26.0",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "pydantic>=2.9.2",
    "cookiecutter>=2.6.0",
    "pandas>=2.2.3",
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
    "jinja2>=3.1.6",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.2", "pytest-httpserver>=1.1.0"]


[project.scripts]
vulkan = "vulkan_public.cli.main:cli"

[tool.ruff]
exclude = ["templates"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
