[project]
name = "vulkan_server"
version = "0.1.0"
description = "Vulkan data server"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "vulkan-engine",
    "pytest>=8.3.2",
    "pytest-httpserver>=1.1.0",
]
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = ["pytest>=8.3.2"]

[tool.uv.sources]
vulkan-engine = { path = "../vulkan-engine" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
