[project]
name = "vulkan_server"
version = "0.1.0"
description = "Vulkan data server"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "vulkanlabs-vulkan-engine",
    "pytest>=8.3.2",
    "pytest-httpserver>=1.1.0",
]
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = ["pytest>=8.3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vulkan_server"]

# Include all files in the alembic directory (migrations, templates, config)
artifacts = [
  "vulkan_server/alembic.ini",
  "vulkan_server/alembic/**",
]
