[project]
name = "vulkan"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "coloredlogs>=14.0",
    "requests>=2.26.0",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "pydantic>=2.9.2",
    "cookiecutter>=2.6.0",
    "pandas>=2.2.3",
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
    "jinja2>=3.1.6",
    "gcsfs>=2025.3.2",
]

[project.optional-dependencies]
beam = ["apache-beam[dataframe,gcp]>=2.60.0"]
dagster = [
    "dagster==1.8.2",
    "dagster-webserver>=1.8.2",
    "dagster-postgres>=0.24.2",
    "sqlalchemy>=2.0.41",
]
all = [
    "vulkan[beam]",
    "vulkan[dagster]",
]


[tool.uv]
dev-dependencies = [
    "apache-beam[dataframe,gcp]>=2.60.0",
    "pytest>=8.3.2",
    "pytest-httpserver>=1.1.0",
]

[project.scripts]
vulkan = "vulkan.cli.main:cli"

[tool.ruff]
exclude = ["templates"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
