[project]
name = "vulkan"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "requests>=2.26.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.2",
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
beam = ["apache-beam[dataframe,gcp]>=2.60.0"]
dagster = [
    "dagster==1.8.2",
    "dagster-webserver>=1.8.2",
    "dagster-postgres>=0.24.2",
    "sqlalchemy>=2.0.41",
]
all = [
    "vulkan[beam]",
    "vulkan[dagster]",
]


[tool.uv]
dev-dependencies = [
    "apache-beam[dataframe,gcp]>=2.60.0",
    "pandas>=2.2.3",
    "pytest>=8.3.2",
    "pytest-httpserver>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
