[project]
name = "vulkanlabs-vulkan"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.2",
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
beam = ["apache-beam[dataframe,gcp]>=2.69.0"]
dagster = [
    "dagster>=1.11.9",
    "dagster-postgres>=0.27.9",
]
hatchet = [
    "hatchet-sdk>=1.16",
]


[tool.uv]
dev-dependencies = [
    "apache-beam[dataframe,gcp]>=2.69.0",
    "pandas>=2.2.3",
    "pytest>=8.3.2",
    "pytest-httpserver>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vulkan"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

