[project]
name = "lineart"
version = "0.1.0"
description = "Client utils for the Vulkan server"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    # FIXME: dagster 1.8.2 depends on coloredlogs<15. 
    # Remove this constraint when dagster is updated or removed.
    "coloredlogs<15",
    "requests>=2.26.0",
    "lineart-sdk",
]

[project.scripts]
vcli = "lineart.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
lineart-sdk = { path = "../python" }
